[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reel-from-dm"
version = "0.1.0"
description = "Download reels from Instagram DMs and assemble a compilation video"
authors = [{ name = "Reel From DM" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "instagrapi>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
]

[project.scripts]
reel-from-dm = "reel_from_dm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["reel_from_dm*" ]
